test/testdata/string/escape_hex_incomplete_error.lox
// syntaxerror
// error: unterminated string literal
// lint error: unterminated string literal
// error: invalid hex digit in escape sequence
// lint error: invalid hex digit in escape sequence
print "\x6";
